--- a/pages/index.html
+++ b/pages/index.html
@@ -11,5 +11,8 @@
       Me chamo Joseano Eduardo, estou aprendendo a programar <br />e a
       editar/criar imagens.
     </h1>
+    <a href="imagens.html">Imagens</a> 
+    <br>
+    <a href="projetos.html">Projetos de programação</a>
   </body>
 </html>
