--- a/pages/projetos.html
+++ b/pages/projetos.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Projetos</title>
-</head>
-<body>
-  <h1>Aqui ficará os projetos de programação</h1>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Projetos</title>
+  </head>
+  <body>
+    <a href="index.html">Voltar</a>
+    <h1>Aqui ficará os projetos de programação</h1>
+  </body>
 </html>
