--- a/index.html
+++ b/index.html
@@ -6,13 +6,6 @@
     <title>Home-Joseano</title>
   </head>
   <body>
-    <h1>
-      Olá, muito bem vindo ao meu portifólio pessoal. <br />
-      Me chamo Joseano Eduardo, estou aprendendo a programar <br />e a
-      editar/criar imagens.
-    </h1>
-    <a href="pages/imagens.html">Imagens</a>
-    <br />
-    <a href="pages/projetos.html">Projetos de programação</a>
+    <h1>Página indísponivel no momento, volte mais tarde.</h1>
   </body>
 </html>
